--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "lodash": "^4.17.21",
     "next": "13.1.1",
     "nookies": "^2.5.2",
     "querystringify": "^2.2.0",
